crates/auto-lang/test/cookbook/errors/004_retain/retain.at
use.rust std::error::Error

fn inner() !str {
    Err("inner error")
}

fn outer() !str {
    let result = inner().?
    Ok(result)
}

fn main() {
    let result = outer()
    is result {
        Ok(val) -> print(f"Success: ${val}"),
        Err(e) -> print(f"Error: ${e}")
    }
}
